Put js files into a folder

--- a/Homework_6B/cart-page.html
+++ b/Homework_6B/cart-page.html
@@ -36,7 +36,7 @@
 
         </div>
     
-    <script src="cart-page.js"></script>
+    <script src="scripts/cart-page.js"></script>
 
     </body>
 
