--- a/Homework_6B/product-browsing.html
+++ b/Homework_6B/product-browsing.html
@@ -79,6 +79,6 @@
             </a>
         </div> <!-- .browsing-container -->
 
-        <script src="product-browsing.js"></script>
+        <script src="scripts/product-browsing.js"></script>
     
     </body>
