--- a/Homework_6B/product-detail.html
+++ b/Homework_6B/product-detail.html
@@ -105,7 +105,7 @@
         <div class="product-carousel-l-arrow" id="product-carousel-l"><img src="images/L_arrow.svg" alt="carousel left arrow"></div>
         <div class="product-carousel-r-arrow" id="product-carousel-r"><img src="images/R_arrow.svg" alt="carousel right arrow"></div>
 
-    <script src="product-detail.js"></script>
+    <script src="scripts/product-detail.js"></script>
 
     </body>
 
