Renamed landing page and started initial home page

--- a/Homework_8/landing.html
+++ b/Homework_8/landing.html
@@ -9,10 +9,10 @@
         <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     </head>
 
-    <body class="home-body">
-        <h1 class="home-h1">The Earth faces a threat.</h1>
+    <body class="landing-body">
+        <h1 class="landing-h1">The Earth faces a threat.</h1>
         <p>As humans continue to burn fossil fuels for energy, the carbon dioxide produced will further contribute to a greenhouse effect, trapping heat in our atmosphere. Earth’s temperatures will increase, sea levels will rise, and humans will have to live through climatic extremes.</p>
-        <a href="home2.html" class="what-can-help">What can help?</a>
+        <a href="initial_home.html" class="what-can-help">What can help?</a>
     </body>
 
 </html>
