--- a/Homework_8/initial_home.html
+++ b/Homework_8/initial_home.html
@@ -13,7 +13,7 @@
         <h1 class="initial-h1"><span class="initial-span">Renewable energy: </span>energy that is taken from sources that are naturally replenishing</h1>
         <p class="initial-p"> Renewable energy sources such as the sun, wind, and water provide a sustainable alternative to fossil fuels, thereby helping reduce greenhouse gas emissions, limit the increase in global temperature, and mitigate the harms of climate change. Not only that, but these alternative energy sources still work just as well as fossil fuels to heat your homes and turn on your lights.</p>
 
-        <svg id="initial-home" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 311 425" width="311" height="425">
+        <svg id="initial-home-bulb" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 311 425" width="311" height="425">
             <defs><style>.cls-1{fill:#fff500;}.cls-1,.cls-2,.cls-3{stroke:#000;stroke-width:3px;}.cls-2{fill:#ffc700;}.cls-3{fill:#c4c4c4;}</style></defs>
             <path id="shape1" class="cls-1" d="M637.72,544.51l-31.41-61.78-39.5,139.49Z" transform="translate(-565.37 -425.65)"/>
             <path id="shape2" class="cls-1" d="M638,541l-31-57,114.5-55Z" transform="translate(-565.37 -425.65)"/>
@@ -32,7 +32,7 @@
             <rect id="shape15" class="cls-3" x="101.63" y="409.35" width="105" height="14"/>
         </svg>
 
-        <p class="initial-p">Click on the lightbulb to begin exploring.</p>
+        <p class="initial-p" id="click-on-lightbulb">Click on the lightbulb to begin exploring.</p>
     </body>
 
 </html>
