Fixed viewport and added sun animation

--- a/Homework_8/initial_home.html
+++ b/Homework_8/initial_home.html
@@ -26,9 +26,9 @@
             </div>
         </div>
 
-        <div class="row justify-content-center">
-            <div class="col-4">
-                <svg id="initial-home-bulb" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 311 425" width="311" height="425" class="img-fluid">
+        <!-- <div class="row justify-content-center">
+            <div class="col-4"> -->
+                <svg id="initial-home-bulb" xmlns="http://www.w3.org/2000/svg" viewBox="-560 -100 1440 900" class="img-fluid" role="button">
                     <defs><style>.bulb-1{fill:#fff500;}.bulb-1,.bulb-2,.bulb-3{stroke:#000;stroke-width:3px;}.bulb-2{fill:#ffc700;}.bulb-3{fill:#c4c4c4;}</style></defs>
                     <path id="shape1" class="bulb-1" d="M637.72,544.51l-31.41-61.78-39.5,139.49Z" transform="translate(-565.37 -425.65)"/>
                     <path id="shape2" class="bulb-1" d="M638,541l-31-57,114.5-55Z" transform="translate(-565.37 -425.65)"/>
@@ -54,7 +54,7 @@
 
         <!-- <div class="row justify-content-center" id="pipes-row"> MESSES UP VERTICALLY-->
             <!-- <div class="col-md-10 col-sm-10"> -->
-                <svg id="main-pipes" xmlns="http://www.w3.org/2000/svg" viewBox="-8 0 925 500" width="940" height="500" class="img-fluid">
+                <svg id="main-pipes" xmlns="http://www.w3.org/2000/svg" viewBox="-263 0 1440 450" class="img-fluid">
                     <defs><style>.pipes-1,.pipes-2{fill:#fff500;}.pipes-1,.pipes-3,.pipes-5{stroke:#000;stroke-width:2px;}.pipes-3,.pipes-4{fill:#e5e5e5;}.pipes-5,.cls-6{fill:#46a6ff;}</style></defs><rect id="sun-pipe-bottom" class="pipes-1" x="18.6" y="387" width="16" height="87"/>
                     <path id="sun-word" class="pipes-2" d="M274.14,875.32a7,7,0,0,1-5.61-2.26,10.37,10.37,0,0,1-2.13-6.23l3.6-1a11.42,11.42,0,0,0,1.08,4.53,3.23,3.23,0,0,0,3.06,1.73,3.09,3.09,0,0,0,2.38-.86,3.67,3.67,0,0,0,.83-2.56,5.42,5.42,0,0,0-.76-3,12.85,12.85,0,0,0-2.41-2.63l-4.9-4.32a8.47,8.47,0,0,1-2.16-2.77,9.35,9.35,0,0,1-.64-3.67,6.58,6.58,0,0,1,1.83-5,8.19,8.19,0,0,1,10.23.07,9.31,9.31,0,0,1,2.12,5.69l-3.46.94a9,9,0,0,0-1-3.93,3,3,0,0,0-2.88-1.4,3.22,3.22,0,0,0-2.38.83,3.15,3.15,0,0,0-.83,2.37,5.16,5.16,0,0,0,.43,2.2,5.87,5.87,0,0,0,1.48,1.76L277,860.2a14.59,14.59,0,0,1,3,3.68,8.86,8.86,0,0,1,1.15,4.5,6.7,6.7,0,0,1-1.95,5.07A6.93,6.93,0,0,1,274.14,875.32Zm17.67,0A8.14,8.14,0,0,1,287,874.1a6.27,6.27,0,0,1-2.34-3.42,19.85,19.85,0,0,1-.65-5.51V845.84h3.89v19.51a12.94,12.94,0,0,0,.76,5,3.09,3.09,0,0,0,3.13,1.73,3,3,0,0,0,3.09-1.73,12.47,12.47,0,0,0,.8-5V845.84h3.85v19.33a19.85,19.85,0,0,1-.65,5.51,6.27,6.27,0,0,1-2.34,3.42A8,8,0,0,1,291.81,875.32Zm12-29.48h2.77l8.28,19.37V845.84h3.39V875h-2.6l-8.38-19.91V875h-3.46Z" transform="translate(-266.4 -551)"/>
                     <rect id="sun-pipe-top-3" class="pipes-1" x="427.6" y="1" width="16" height="141"/>
