Fixed lightbulb positioning and started modals

--- a/Homework_8/initial_home.html
+++ b/Homework_8/initial_home.html
@@ -28,7 +28,10 @@
 
         <!-- <div class="row justify-content-center">
             <div class="col-4"> -->
-                <svg id="initial-home-bulb" xmlns="http://www.w3.org/2000/svg" viewBox="-560 -100 1440 900" class="img-fluid" role="button">
+            <!-- viewBox="-560 -100 1440 900" -->
+            <!-- viewBox="-290 -100 900 562.5" width 800 height 500 -->
+            <!-- viewBox="-560 -100 1440 600" height 600 -->
+                <svg id="initial-home-bulb" xmlns="http://www.w3.org/2000/svg" viewBox="-560 -100 1440 600" class="img-fluid" role="button" picture="lightbulb">
                     <defs><style>.bulb-1{fill:#fff500;}.bulb-1,.bulb-2,.bulb-3{stroke:#000;stroke-width:3px;}.bulb-2{fill:#ffc700;}.bulb-3{fill:#c4c4c4;}</style></defs>
                     <path id="shape1" class="bulb-1" d="M637.72,544.51l-31.41-61.78-39.5,139.49Z" transform="translate(-565.37 -425.65)"/>
                     <path id="shape2" class="bulb-1" d="M638,541l-31-57,114.5-55Z" transform="translate(-565.37 -425.65)"/>
@@ -46,6 +49,23 @@
                     <rect id="shape14" class="bulb-3" x="101.63" y="392.35" width="105" height="14"/>
                     <rect id="shape15" class="bulb-3" x="101.63" y="409.35" width="105" height="14"/>
                 </svg>
+                <!-- <svg id="initial-home-bulb" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="-560 -100 1440 900"><defs><style>.bulb-1{fill:#fff500;}.bulb-1,.bulb-2,.bulb-3{stroke:#000;stroke-width:3px;}.bulb-2{fill:#ffc700;}.bulb-3{fill:#c4c4c4;}</style></defs>
+                    <path id="shape1" class="bulb-1" d="M86.72,119.51,55.31,57.73l-39.5,139.5Z" transform="translate(-14.37 -0.65)"/>
+                    <path id="shape2" class="bulb-1" d="M87,116,56,59,170.5,4Z" transform="translate(-14.37 -0.65)"/>
+                    <path id="shape3" class="bulb-1" d="M252.5,114l31-57L169,2Z" transform="translate(-14.37 -0.65)"/>
+                    <path id="shape4" class="bulb-1" d="M252.77,119.51l31.42-61.78,39.5,139.5Z" transform="translate(-14.37 -0.65)"/>
+                    <path id="shape5" class="bulb-1" d="M85,117,170.5,4,253,117Z" transform="translate(-14.37 -0.65)"/>
+                    <path id="shape6" class="bulb-1" d="M169.5,173.5,86,115H255.5Z" transform="translate(-14.37 -0.65)"/>
+                    <path id="shape7" class="bulb-1" d="M115,373,86,118l83.5,57.5Z" transform="translate(-14.37 -0.65)"/>
+                    <path id="shape8" class="bulb-1" d="M224,373.5l29-255L169.5,176Z" transform="translate(-14.37 -0.65)"/>
+                    <path id="shape9" class="bulb-1" d="M115.42,374.38,84.2,119.64,16.4,195Z" transform="translate(-14.37 -0.65)"/>
+                    <path id="shape10" class="bulb-1" d="M224.08,374.38,255.3,119.64,323.1,195Z" transform="translate(-14.37 -0.65)"/>
+                    <path id="shape11" class="bulb-2" d="M170.5,375.5v-196l-53,196Z" transform="translate(-14.37 -0.65)"/>
+                    <path id="shape12" class="bulb-2" d="M169.5,375.5v-196l53,196Z" transform="translate(-14.37 -0.65)"/>
+                    <rect id="shape13" class="bulb-3" x="101.63" y="375.35" width="105" height="14"/>
+                    <rect id="shape14" class="bulb-3" x="101.63" y="392.35" width="105" height="14"/>
+                    <rect id="shape15" class="bulb-3" x="101.63" y="409.35" width="105" height="14"/>
+                </svg> -->
             </div>
         </div>
 
@@ -73,6 +93,12 @@
                 <button class="btn btn-light" id="back-btn">Back</button>
             </div>
         </div>
+
+        <!-- SUN MODALS -->
+
+        <!-- WIND MODALS -->
+
+        <!-- WATER MODALS -->
 
         <script src="script.js"></script>
 
