--- a/Homework_8/initial_home.html
+++ b/Homework_8/initial_home.html
@@ -102,7 +102,7 @@
             <rect id="water-pipe-top-1" class="pipes-5" x="461.6" y="1" width="16" height="141"/>
         </svg>  -->
         
-        <button class="btn btn-light" id="back-btn">Back</button>
+        <button class="btn btn-outline-dark" id="back-btn">&larr; Back</button>
 
 
 
