--- a/Homework_8/initial_home.html
+++ b/Homework_8/initial_home.html
@@ -66,7 +66,6 @@
 
         <p class="initial-p" id="click-on-lightbulb">Click on the lightbulb to begin exploring.</p>
 
-
         <!-- <svg id="initial-home-bulb" xmlns="http://www.w3.org/2000/svg" viewBox="-560 -50 1440 500" class="img-fluid" role="button" picture="lightbulb">
             <defs><style>.bulb-1{fill:#fff500;}.bulb-1,.bulb-2,.bulb-3{stroke:#000;stroke-width:3px;}.bulb-2{fill:#ffc700;}.bulb-3{fill:#c4c4c4;}</style></defs>
             <path id="shape1" class="bulb-1" d="M637.72,544.51l-31.41-61.78-39.5,139.49Z" transform="translate(-565.37 -425.65)"/>
@@ -103,8 +102,9 @@
         </svg>  -->
         
         <button class="btn btn-outline-dark" id="back-btn">&larr; Back</button>
-
-
+        <h1 id="sun-title">SOLAR POWER</h1>
+        <h1 id="wind-title">WIND ENERGY</h1>
+        <h1 id="water-title">HYDROPOWER</h1>
 
         <!-- SUN MODALS -->
         <div class="modal fade" id="sun8">
