Added summary text and made responsive

--- a/Homework_8/initial_home.html
+++ b/Homework_8/initial_home.html
@@ -105,6 +105,27 @@
         <h1 id="sun-title">SOLAR POWER</h1>
         <h1 id="wind-title">WIND ENERGY</h1>
         <h1 id="water-title">HYDROPOWER</h1>
+        <div class="container">
+            <div class="row justify-content-end">
+                <div class="col-sm-10 col-lg-3" id="sun-summary">
+                    <p id="sun-sum-p">Energy from the sun can be collected and used to provide heat or be converted directly into electricity.</p>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row justify-content-end">
+                <div class="col-sm-10 col-lg-3" id="wind-summary">
+                    <p id="wind-sum-p">The kinetic energy of moving air can be harvested to produce electricity.</p>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row justify-content-end">
+                <div class="col-sm-10 col-lg-3" id="water-summary">
+                    <p id="water-sum-p">Hydropower is energy that was harnessed from flowing water.</p>
+                </div>
+            </div>
+        </div>
 
         <!-- SUN MODALS -->
         <div class="modal fade" id="sun8">
