Added lorem ipsum into modals

--- a/Homework_8/initial_home.html
+++ b/Homework_8/initial_home.html
@@ -136,7 +136,7 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                     <div class="modal-body">
-                        hello8
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium consectetur placeat necessitatibus repudiandae eligendi vero esse neque repellendus aspernatur sunt nobis autem, optio minus cumque, corrupti sapiente, tenetur ullam blanditiis!
                     </div><!-- .modal-body -->
                 </div><!-- .modal-content -->
             </div><!-- .modal-dialog -->
@@ -148,7 +148,7 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                     <div class="modal-body">
-                        hello10
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab reprehenderit maxime dignissimos iste, atque odit sed eius ea praesentium et saepe necessitatibus hic dolorum recusandae nemo non voluptatibus consequatur. Quia!
                     </div><!-- .modal-body -->
                 </div><!-- .modal-content -->
             </div><!-- .modal-dialog -->
@@ -160,7 +160,7 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                     <div class="modal-body">
-                        hello7
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis veniam molestias debitis atque illo neque a blanditiis quas, perferendis sunt deleniti! Aperiam, possimus veniam labore hic aspernatur placeat deleniti quia!
                     </div><!-- .modal-body -->
                 </div><!-- .modal-content -->
             </div><!-- .modal-dialog -->
@@ -172,7 +172,7 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                     <div class="modal-body">
-                        hello9
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur nisi, error, culpa voluptatibus necessitatibus, facere inventore autem ex ullam veritatis earum. Et, possimus consequuntur. A porro maxime magni quidem accusantium?
                     </div><!-- .modal-body -->
                 </div><!-- .modal-content -->
             </div><!-- .modal-dialog -->
