--- a/Homework_8/initial_home.html
+++ b/Homework_8/initial_home.html
@@ -31,22 +31,22 @@
         </div>
 
 
-        <svg id="bulb-and-pipes" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 963 957.35" picture="lightbulb"><defs><style>.word-bg{fill:#02004b;}.cls-2,.cls-5,.cls-6{fill:#fff500;}.cls-2,.cls-3,.cls-4,.cls-5,.cls-7,.cls-9{stroke:#000;}.cls-2,.cls-3,.cls-4{stroke-width:3px;}.cls-3{fill:#ffc700;}.cls-4{fill:#c4c4c4;}.cls-5,.cls-7,.cls-9{stroke-width:2px;}.cls-7,.cls-8{fill:#e5e5e5;}.cls-10,.cls-9{fill:#46a6ff;}</style></defs>
+        <svg id="bulb-and-pipes" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 963 957.35"><defs><style>.word-bg{fill:#02004b;}.cls-2,.cls-5,.cls-6{fill:#fff500;}.cls-2,.cls-3,.cls-4,.cls-5,.cls-7,.cls-9{stroke:#000;}.cls-2,.cls-3,.cls-4{stroke-width:3px;}.cls-3{fill:#ffc700;}.cls-4{fill:#c4c4c4;}.cls-5,.cls-7,.cls-9{stroke-width:2px;}.cls-7,.cls-8{fill:#e5e5e5;}.cls-10,.cls-9{fill:#46a6ff;}</style></defs>
             <rect id="sun-rectangle" class="word-bg pipes sun-click" y="751.35" width="110" height="77"/>
             <rect id="wind-rectangle" class="word-bg pipes wind-click" x="426" y="751.35" width="110" height="77"/>
             <rect id="water-rectangle" class="word-bg pipes water-click" x="853" y="751.35" width="110" height="77"/>
-            <path id="shape1" class="cls-2 water-shape" d="M636.72,187.51l-31.41-61.79-39.5,139.51Z" transform="translate(-238 -68.65)"/>
-            <path id="shape2" class="cls-2 water-shape" d="M637,184l-31-57L720.5,72Z" transform="translate(-238 -68.65)"/>
-            <path id="shape3" class="cls-2 wind-shape water-shape" d="M802.5,182l31-57L719,70Z" transform="translate(-238 -68.65)"/>
-            <path id="shape4" class="cls-2 water-shape" d="M802.78,187.51l31.41-61.79,39.5,139.51Z" transform="translate(-238 -68.65)"/>
-            <path id="shape5" class="cls-2 water-shape" d="M635,185,720.5,72,803,185Z" transform="translate(-238 -68.65)"/>
-            <path id="shape6" class="cls-2 wind-shape water-shape" d="M719.5,241.5,636,183H805.5Z" transform="translate(-238 -68.65)"/>
-            <path id="shape7" class="cls-2 sun-shape wind-shape wind-group water-shape" d="M665,441,636,186l83.5,57.5Z" transform="translate(-238 -68.65)"/>
-            <path id="shape8" class="cls-2 sun-shape water-shape" d="M774,441.5l29-255L719.5,244Z" transform="translate(-238 -68.65)"/>
-            <path id="shape9" class="cls-2 sun-shape wind-shape wind-group water-shape" d="M665.42,442.38,634.2,187.65,566.4,263Z" transform="translate(-238 -68.65)"/>
-            <path id="shape10" class="cls-2 sun-shape wind-shape wind-group water-shape" d="M774.08,442.38,805.3,187.65,873.1,263Z" transform="translate(-238 -68.65)"/>
-            <path id="shape11" class="cls-3 water-shape" d="M720.5,443.5v-196l-53,196Z" transform="translate(-238 -68.65)"/>
-            <path id="shape12" class="cls-3 water-shape" d="M719.5,443.5v-196l53,196Z" transform="translate(-238 -68.65)"/>
+            <path id="shape1" class="cls-2 water-shape water-big-group" d="M636.72,187.51l-31.41-61.79-39.5,139.51Z" transform="translate(-238 -68.65)"/>
+            <path id="shape2" class="cls-2 water-shape water-big-group" d="M637,184l-31-57L720.5,72Z" transform="translate(-238 -68.65)"/>
+            <path id="shape3" class="cls-2 wind-shape water-shape water-big-group" d="M802.5,182l31-57L719,70Z" transform="translate(-238 -68.65)"/>
+            <path id="shape4" class="cls-2 water-shape water-big-group" d="M802.78,187.51l31.41-61.79,39.5,139.51Z" transform="translate(-238 -68.65)"/>
+            <path id="shape5" class="cls-2 water-shape water-big-group" d="M635,185,720.5,72,803,185Z" transform="translate(-238 -68.65)"/>
+            <path id="shape6" class="cls-2 wind-shape water-shape water-big-group" d="M719.5,241.5,636,183H805.5Z" transform="translate(-238 -68.65)"/>
+            <path id="shape7" class="cls-2 sun-shape wind-shape wind-group water-shape water-big-group" d="M665,441,636,186l83.5,57.5Z" transform="translate(-238 -68.65)"/>
+            <path id="shape8" class="cls-2 sun-shape water-shape water-big-group" d="M774,441.5l29-255L719.5,244Z" transform="translate(-238 -68.65)"/>
+            <path id="shape9" class="cls-2 sun-shape wind-shape wind-group water-shape water-small-group" d="M665.42,442.38,634.2,187.65,566.4,263Z" transform="translate(-238 -68.65)"/>
+            <path id="shape10" class="cls-2 sun-shape wind-shape wind-group water-shape water-small-group" d="M774.08,442.38,805.3,187.65,873.1,263Z" transform="translate(-238 -68.65)"/>
+            <path id="shape11" class="cls-3 water-shape water-big-group" d="M720.5,443.5v-196l-53,196Z" transform="translate(-238 -68.65)"/>
+            <path id="shape12" class="cls-3 water-shape water-big-group" d="M719.5,443.5v-196l53,196Z" transform="translate(-238 -68.65)"/>
             <rect id="shape13" class="cls-4 water-shape" x="428" y="375.35" width="105" height="14"/>
             <rect id="shape14" class="cls-4" x="428" y="392.35" width="105" height="14"/>
             <rect id="shape15" class="cls-4" x="428" y="409.35" width="105" height="14"/>
