Animated landing page and added back buttons

--- a/Homework_8/initial_home.html
+++ b/Homework_8/initial_home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-        <title>Sustainable Energy</title>
+        <title>Renewable Energy</title>
         <meta charset="UTF-8">
         <!-- Bootstrap -->
 
@@ -22,6 +22,7 @@
     </head>
 
     <body id="initial-home-body">
+        <a href="landing.html" id="back-to-landing">&larr; Back</a>
         <h1 class="initial-h1" id="initial-h1"><span class="initial-span">Renewable energy: </span>energy that is taken from sources that are naturally replenishing</h1>
 
         <div class="row justify-content-center" id="initial-p">
