--- a/Homework_8/landing.html
+++ b/Homework_8/landing.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-        <title>Sustainable Energy</title>
+        <title>Renewable Energy</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="styles.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -10,9 +10,9 @@
     </head>
 
     <body class="landing-body">
-        <h1 class="landing-h1">The Earth faces a threat.</h1>
-        <p>As humans continue to burn fossil fuels for energy, the carbon dioxide produced will further contribute to a greenhouse effect, trapping heat in our atmosphere. Earth’s temperatures will increase, sea levels will rise, and humans will have to live through climatic extremes.</p>
-        <a href="initial_home.html" class="what-can-help">What can help?</a>
+        <h1 id="landing-h1" class="landing-h1">The Earth faces a threat.</h1>
+        <p id="landing-p">As humans continue to burn fossil fuels for energy, the carbon dioxide produced will further contribute to a greenhouse effect, trapping heat in our atmosphere. Earth’s temperatures will increase, sea levels will rise, and humans will have to live through climatic extremes.</p>
+        <a href="initial_home.html" class="what-can-help" id="what-can-help">What can help?</a>
     </body>
 
 </html>
