--- a/Homework_8/initial_home.html
+++ b/Homework_8/initial_home.html
@@ -10,8 +10,15 @@
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
-        <!-- CSS stylesheet -->
+        <!-- CSS  -->
+        <!-- General CSS -->
         <link rel="stylesheet" href="styles.css">
+        <!-- Sun CSS -->
+        <link rel="stylesheet" href="sun-styles.css">
+        <!-- Wind CSS -->
+        <link rel="stylesheet" href="wind-styles.css">
+        <!-- Water CSS -->
+        <link rel="stylesheet" href="water-styles.css">
         <!-- fonts -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
@@ -137,7 +144,7 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                     <div class="modal-body">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium consectetur placeat necessitatibus repudiandae eligendi vero esse neque repellendus aspernatur sunt nobis autem, optio minus cumque, corrupti sapiente, tenetur ullam blanditiis!
+                        Solar energy can be harvested in two ways: photovoltaic cells, which make up solar panels and convert sunlight directly into electricity, or concentrated solar power technology, which uses mirrors to concentrate solar rays that power a turbine and generate electricity.
                     </div><!-- .modal-body -->
                 </div><!-- .modal-content -->
             </div><!-- .modal-dialog -->
