--- a/Homework_8/landing.html
+++ b/Homework_8/landing.html
@@ -4,7 +4,7 @@
     <head>
         <title>Renewable Energy</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="assets/css/styles.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     </head>
