Fixed some small whitespace typos

--- a/Homework_8/initial_home.html
+++ b/Homework_8/initial_home.html
@@ -23,6 +23,9 @@
         <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+
+        <!-- ********** SCRIPTS ********** -->
+
         <!-- GSAP -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js" integrity="sha512-IQLehpLoVS4fNzl7IfH8Iowfm5+RiMGtHykgZJl9AWMgqx0AmJ6cRWcB+GaGVtIsnC4voMfm8f2vwtY+6oPjpQ==" crossorigin="anonymous"></script>
         <!-- JQuery -->
@@ -40,7 +43,8 @@
         </div>
 
         <!-- SVG for lightbulb, pipes, and words -->
-        <svg id="bulb-and-pipes" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 963 957.35"><defs><style>.word-bg{fill:#02004b;}.cls-2,.cls-5,.cls-6{fill:#fff500;}.cls-2,.cls-3,.cls-4,.cls-5,.cls-7,.cls-9{stroke:#000;}.cls-2,.cls-3,.cls-4{stroke-width:3px;}.cls-3{fill:#ffc700;}.cls-4{fill:#c4c4c4;}.cls-5,.cls-7,.cls-9{stroke-width:2px;}.cls-7,.cls-8{fill:#e5e5e5;}.cls-10,.cls-9{fill:#46a6ff;}</style></defs>
+        <svg id="bulb-and-pipes" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 963 957.35">
+            <defs><style>.word-bg{fill:#02004b;}.cls-2,.cls-5,.cls-6{fill:#fff500;}.cls-2,.cls-3,.cls-4,.cls-5,.cls-7,.cls-9{stroke:#000;}.cls-2,.cls-3,.cls-4{stroke-width:3px;}.cls-3{fill:#ffc700;}.cls-4{fill:#c4c4c4;}.cls-5,.cls-7,.cls-9{stroke-width:2px;}.cls-7,.cls-8{fill:#e5e5e5;}.cls-10,.cls-9{fill:#46a6ff;}</style></defs>
             <rect id="sun-rectangle" class="word-bg pipes sun-click" y="751.35" width="110" height="77"/>
             <rect id="wind-rectangle" class="word-bg pipes wind-click" x="426" y="751.35" width="110" height="77"/>
             <rect id="water-rectangle" class="word-bg pipes water-click" x="853" y="751.35" width="110" height="77"/>
